# Automata

./: Automata.cpp  Automata.h  CMakeLists.txt  MyPair.hpp  MySharedPointer.hpp  MyVector.hpp  README.md  State.cpp  State.h  main.cpp
BaseComponents/: MyReferenceCounter.cpp  MyReferenceCounter.h  MySet.hpp  MySharedPointer.hpp  MyString.cpp  MyString.h  MyVector.hpp  SharePtr.hpp
BaseComponents/Pair/: MyPair.hpp
BaseComponents/Ptrs/: MySharePtr.hpp  MyWeakPtr.hpp
BaseComponents/Set/: MySet.hpp
BaseComponents/String/: MyString.cpp  MyString.h
BaseComponents/trash/: MyReferenceCounter.cpp  MySharedPointer.hpp  State.cpp  State.h
Factory/: AutomataInterface.cpp  AutomataInterface.h
Factory/Files/: FileManager.cpp  FileManager.h
Factory/Parsers/: RegExParser.cpp  RegExParser.h
Factory/Tests/: Tests.cpp  Tests.h
Main/: Automata.cpp  Automata.h  State.cpp  State.h
